[project]
name = "site-project-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart]>=0.120.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pyodbc>=5.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
